--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp</title>
+    <title>Expense tracking site in India: signup/login page</title>
     <link rel="stylesheet" href="/css/signup.css">
 </head>
 
